--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing=20>
         <tr>
             <td>
-                <img src="D:/Downloads/abhi.png" alt="abhi"> 
+                <img src="D:/Karan/Web Dev/Website/images/abhi.png" alt="abhi"> 
             </td>
             <td>
                 <h1>Abhyuday Singh</h1>
